Tue Aug 27 17:02:58 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (copy_stream_body): should write in binary mode.  based on a
	  patch by godfat (Lin Jen-Shin) at [ruby-core:56556].
	  [ruby-core:56518] [Bug #8767]

Tue Aug 27 17:02:33 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (copy_stream_body): move common open flags.

Tue Aug 27 16:56:50 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enumerator.c (enumerator_size): use rb_check_funcall() instead of
	  respond_to? and call.

	* enumerator.c (enumerator_each): ensure that argument array size
	  does not overflow at appending.

Tue Aug 27 16:46:05 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_index, rb_ary_rindex): use optimized equality to
	  improve performance.  [Feature #8820]

	* vm_insnhelper.c (rb_equal_opt): optimized equality function.

Tue Aug 27 16:11:05 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (opt_eq_func): use RBASIC_CLASS() instead of HEAP_CLASS_OF().

	* insns.def (opt_plus, opt_minus, opt_mult, opt_div, opt_mod, opt_lt),
	  (opt_gt, opt_ltlt, opt_aref, opt_aset, opt_length, opt_size),
	  (opt_empty_p, opt_succ): ditto.

Tue Aug 27 16:08:26 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_check_funcall, rb_check_funcall_with_hook): constify
	  argv.

Tue Aug 27 13:03:33 2013  Koichi Sasada  <ko1@atdot.net>

	* ext/stringio/stringio.c (strio_read_nonblock): declare local
	  variables at the first of function.

Tue Aug 27 11:51:37 2013  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* enumerator.c: Allow Enumerator size argument to be any callable.
	  Patch by Avdi Grimm. [bug #8641] [ruby-core:56032] [fix GH-362]

	* test/ruby/test_enumerator.rb: Test for above

Tue Aug 27 11:46:31 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_profile_clear): do rest_sweep() before clearing
	  profile.current_record.

Tue Aug 27 07:35:05 2013  Aaron Patterson <aaron@tenderlovemaking.com>
